Bug 108619 - Weird artifacts in VariCAD 3D
Summary: Weird artifacts in VariCAD 3D
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 18.2
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: bisected
Depends on:
Blocks:
 
Reported: 2018-11-01 08:08 UTC by brodo
Modified: 2018-11-08 11:08 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshots of problem (323.07 KB, application/zip)
2018-11-01 08:08 UTC, brodo
Details
file to test (35.87 KB, application/zip)
2018-11-01 08:09 UTC, brodo
Details
108619_wa.diff (687 bytes, patch)
2018-11-01 12:32 UTC, Sergii Romantsov
Details | Splinter Review

Description brodo 2018-11-01 08:08:28 UTC
Created attachment 142320 [details]
screenshots of problem

In VariCAD 2.09-2.11, there are some graphical weird phantoms during rotating or moving 3D view position.
Comment 1 brodo 2018-11-01 08:09:14 UTC
Created attachment 142321 [details]
file to test
Comment 2 brodo 2018-11-01 08:10:42 UTC
In order to show the artifacts you should rotate the point of view or zoom the objects several times.

This bug may be related to bug nr 108282.
Comment 3 Denis 2018-11-01 10:17:35 UTC
Hi. Thank you for report. I reproduced issue with graphic glitches, going to bisect it.

Issue can be reproduced only after applying fixes from https://bugs.freedesktop.org/show_bug.cgi?id=108282
Comment 4 Sergii Romantsov 2018-11-01 12:32:28 UTC
Unfortunately, the reason of that issue is the same commit as for https://bugs.freedesktop.org/show_bug.cgi?id=108282:

commit a363bb2cd0e2a141f2c60be005009703bffcbe4e
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Tue Apr 10 01:18:25 2018 -0700

    i965: Allocate VMA in userspace for full-PPGTT systems.



To workaround it, please use patch for Mesa: 108619_wa.diff
Comment 5 Sergii Romantsov 2018-11-01 12:32:50 UTC
Created attachment 142329 [details] [review]
108619_wa.diff
Comment 6 Mark Janes 2018-11-01 15:41:34 UTC
Ken, any comment on this one?
Comment 7 brodo 2018-11-01 22:17:36 UTC
The patch 108619_wa.diff works for me.
I'm gonna to test it more.
Comment 8 Sergii Romantsov 2018-11-02 13:37:10 UTC
Seems i got a correct solution.
Will provide patch soon today.
Comment 9 Sergii Romantsov 2018-11-02 15:50:38 UTC
Patch for kernel (extension for previous one for https://bugs.freedesktop.org/show_bug.cgi?id=108282): https://patchwork.freedesktop.org/patch/260026/
Comment 10 Sergii Romantsov 2018-11-08 11:08:37 UTC
Should be fixed in drm-intel/drm-intel-next-queued by:

commit 83b466b1dc5f0b4d33f0a901e8b00197a8f3582d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 2 16:12:09 2018 +0000

    drm/i915: Mark pin flags as u64


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.