drm/i915: GTT offset is cut by 32b-flag.

Operating with gtt-addresses has to be done with 64b variables.

CC: Kenneth Graunke <kenneth@whitecape.org>
CC: Chris Wilson <chris@chris-wilson.co.uk>
Fixes: a363bb2cd0e2 (i965: Allocate VMA in userspace for full-PPGTT systems.)
Fixes: c7c6e46f913b (drm/i915: Convert execbuf to use struct-of-array packing for critical fields)
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=108619
Signed-off-by: Sergii Romantsov <sergii.romantsov@globallogic.com>